--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,14 @@
 <resources>
     <string name="app_name">Feed The Need</string>
-        <string-array name="user_array">
-            <item>Customer</item>
-            <item>Provider</item>
-            <item>Admin</item>
-        </string-array>
+    <string-array name="user_array">
+        <item>Customer</item>
+        <item>Provider</item>
+        <item>Admin</item>
+    </string-array>
+    <string name="title_activity_provider_main">ProviderMainActivity</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
