--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <string name="select">Select Items</string>
+    <string name="select1">Select Food Type</string>
 </resources>
